Fix font baseline alignment

--- a/src/assets/styles/base.scss
+++ b/src/assets/styles/base.scss
@@ -9,6 +9,7 @@
 @font-face {
   font-family: neucha;
   src: url('~/assets/fonts/Neucha-Regular.ttf');
+  descent-override: 15%;
 }
 
 @keyframes loading {
